--- a/azure-pipelines-deploy-vm.yml
+++ b/azure-pipelines-deploy-vm.yml
@@ -56,7 +56,7 @@ stages:
       displayName: 'Install dependencies'
       inputs:
         targetType: 'inline'
-        script: 'pnpm install --frozen-lockfile'
+        script: 'pnpm install'
 
     - script: |
         cd $(Build.SourcesDirectory)
@@ -69,7 +69,7 @@ stages:
         pnpm build
       displayName: 'Build Next.js Application (pnpm build)'
       env:
-        NODE_ENV: 'production'
+        NODE_ENV: 'development'
     - task: CopyFiles@2
       displayName: 'Prepare Artifact: Copy Files to Staging Directory'
       inputs:
@@ -77,7 +77,6 @@ stages:
         Contents: |
           .next/**
           public/**
-          #node_modules/**
           package.json
           pnpm-lock.yaml
           next.config.ts
@@ -87,16 +86,6 @@ stages:
         CleanTargetFolder: true
         OverWrite: true
 
-    - task: Bash@3
-      displayName: 'Install Production Dependencies on VM'
-      inputs:
-        targetType: 'inline'
-        script: |
-          echo "Installing production dependencies in $(VM_PROJECT_PATH)..."
-          pnpm install --prod --frozen-lockfile # Used --prod to skip devDependencies
-          echo "Production dependencies installed."
-        failOnStderr: false
-        workingDirectory: '$(VM_PROJECT_PATH)'
     - task: Bash@3
       displayName: 'Prisma Generate Client on VM (Post-Install)'
       inputs:
@@ -114,7 +103,7 @@ stages:
         targetType: 'inline'
         script: |
           echo "Running Prisma migrations using DATABASE_URL from .env file..."
-          npx prisma migrate deploy
+          npx prisma migrate dev
           echo "Prisma migrations applied."
         failOnStderr: true
         workingDirectory: '$(VM_PROJECT_PATH)'
